third_party/move/tools/move-package-manifest/tests/dependencies/libra2-missing-address.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [dependencies]
6 | a = { libra2 = "mainnet" }
  |     ^^^^^^^^^^^^^^^^^^^^^ missing field "address" for libra2 dependency
  |
